--- a/frontend/src/styles/myEventsPage.css
+++ b/frontend/src/styles/myEventsPage.css
@@ -6,40 +6,39 @@
   min-height: 100vh;
 }
 
-.created-events{
+.created-events {
   display: flex;
   flex-direction: column;
 }
-.created-events h2{
-  color: white;
+
+.created-events h2 {
+  color: #b0b0b0;
   text-align: center;
-  font-size: 40px;
+  font-size: 50px;
   margin-top: 50px;
 }
 
 .events-list {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  width: 100%;
-  margin: 30px;
-  gap: 30px;
-  min-height: 80vh;
+  min-width: 1200px;
+  padding: 30px;
+  gap: 5rem;
+  margin: 0 auto;
 }
 
 .event-card {
   background-color: black;
-  width: 30%;
+  flex: 1 1 calc(50% - 30px);
+  max-width: 500px;
   border-radius: 12px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
   transition: box-shadow 0.2s ease;
   display: flex;
   flex-direction: column;
-  margin: 1rem;
+  padding: 1rem;
 }
-
 .event-card:hover {
   box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
 }
@@ -176,21 +175,51 @@ select {
   border-radius: 4px;
 }
 
-.confirmed-events{
+.confirmed-events {
   display: flex;
   flex-direction: column;
 }
-.confirmed-events h2{
-  color: white;
+
+.confirmed-events h2 {
+  color: #b0b0b0;
   text-align: center;
-  font-size: 40px;
-  margin-top: 30px;
+  font-size: 50px;
+  margin-top: 50px;
 }
-.confirmed-events-list{
+
+.confirmed-events-list {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
+  min-width: 1200px;
+  padding: 30px;
+  gap: 5rem;
+  margin: 0 auto;
+}
+
+
+.myEventsPage {
+  scrollbar-width: thin;
+  scrollbar-color: #555 #222;
+}
+
+.myEventsPage::-webkit-scrollbar {
+  width: 8px;
+}
+
+.myEventsPage::-webkit-scrollbar-track {
+  background: #222;
+  border-radius: 4px;
+}
+
+.myEventsPage::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 4px;
+  border: 2px solid #222;
+}
+
+.myEventsPage::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
 }
 
 @media (max-width: 768px) {
