--- a/frontend/src/styles/homePage.css
+++ b/frontend/src/styles/homePage.css
@@ -110,6 +110,7 @@
   border-radius: 15px;
   padding: 1vh 0.2vw;
   background-color: rgb(45, 45, 45);
+  cursor: pointer;
 }
 
 .homeUserCardProfile {
@@ -153,7 +154,7 @@
   width: 90%;
   height: 100%;
 }
-.homeUserCardData div {
+.homeUserCardDataDiv {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -163,6 +164,29 @@
   border-top: 1px solid rgb(196, 196, 196);
 }
 
+.home-user-card-button {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 0.2vw;
+  width: 100%;
+  height: 6vh;
+  border-radius: 16px;
+  padding: 0.5vh 0.25vw;
+}
+
+.home-user-card-button p {
+  color: white;
+  font-size: 1.2em;
+}
+.home-user-card-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.7em 0.8em;
+  border-radius: 100%;
+  background-color: white;
+}
 .home-events-container {
   display: flex;
   flex-direction: column;
@@ -199,6 +223,7 @@
   transition: 0.4s;
   overflow: hidden;
   overflow-y: auto;
+  cursor: pointer;
 }
 
 .event-card-header {
