fixed error with date and time for updating event; added: user cant confirm as coming on some event if status of event is not soon or in progress

--- a/frontend/src/styles/myEventsPage.css
+++ b/frontend/src/styles/myEventsPage.css
@@ -229,6 +229,10 @@ select {
   background-color: #777;
 }
 
+option{
+  color: black;
+}
+
 @media (max-width: 768px) {
   .event-card {
     width: 90%;
